--- a/Ecommerce/Client-App/package.json
+++ b/Ecommerce/Client-App/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
+    "lodash-es": "^4.17.21",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
@@ -25,6 +26,8 @@
     "@angular-devkit/build-angular": "~0.1102.10",
     "@angular/cli": "~11.2.10",
     "@angular/compiler-cli": "~11.2.11",
+    "@types/lodash": "^4.14.168",
+    "@types/lodash-es": "^4.17.4",
     "@types/node": "^12.11.1",
     "typescript": "~4.1.5"
   }
